<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewmodel"
            type="com.sendmoney.kaffka.sendmoney.viewmodels.SendMoneyDialogViewModel"/>

    </data>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/green_rectangle"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_money_to"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/green_circle">

                    <TextView
                        style="@style/TextStyleInitials"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewmodel.contactInitials}"
                        android:textColor="@{viewmodel.contactInitialsColor}"/>
                </FrameLayout>

                <TextView
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:text="@{viewmodel.contactName}"
                    tools:text="Neo Neon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextStyleBig"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/money_symbol_br"/>

                <EditText
                    android:id="@+id/edittext_value"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/value_hint"/>

                <TextView
                    android:id="@+id/send_button"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/send"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_loading"
            style="@style/TextStyleBig"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loading"
            android:gravity="center"
            android:visibility="gone"
            android:background="@color/black"/>

    </FrameLayout>
</layout>