<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sendmoney.kaffka.sendmoney.viewmodels.ActivityProfileViewModel"/>

    </data>

    <LinearLayout
        android:id="@+id/activity_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sendmoney.kaffka.sendmoney.activity.ProfileActivity">

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/green_circle">

            <ImageView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_centerInParent="true"
                app:imageUrl="@{viewmodel.avatarUrl}"/>
        </RelativeLayout>

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{viewmodel.userName}"
            tools:text="Neo Neon"/>

        <TextView
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@{viewmodel.userEmail}"
            tools:text="@string/user_email"/>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <Button
                style="@style/ButtonStyleRed"
                android:layout_marginTop="32dp"
                android:onClick="@{viewmodel.sendMoneyToContactClick}"
                android:text="@string/send_money"/>

            <Button
                style="@style/ButtonStyleBlue"
                android:layout_marginTop="8dp"
                android:onClick="@{viewmodel.openTransactionHistoryClick}"
                android:text="@string/money_sent_history"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_loading"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/loading"/>
    </LinearLayout>
</layout>